# TimeScaleAnalysis

./: .gitattributes  .gitignore  README.md  environment.yml  multi_exp_function_example.txt  pyproject.toml
.github/workflows/: pytest.yml
scripts/: example_absorption.py  example_dynamicalContent.py  example_json.json  example_json_1Observable.json  example_json_Absorption.json  example_label_trajN.txt  example_multi_exp_function_traj2.txt  example_preprocessing.py  example_timescaleAnalysis.py  minimal_example.py  run_timescaleanalysis.py
src/timescaleanalysis/: __init__.py  io.py  plotting.py  preprocessing.py  state_modeling.py  supplementary_analyses.py  timescales.py  utils.py
tests/: test_io.py  test_plotting.py  test_preprocessing.py  test_timescales.py  test_utils.py
tests/test_data/test_absorption_spectra/: test_absorption.txt  test_dynamical_content_absorption.txt  test_json_absorption.json  test_timescale_spectra_absorption.txt
tests/test_data/test_data_arr/: test_data_arr_1Observable_10thFrame.txt  test_data_arr_1Observable_short_10thFrame.txt
tests/test_data/test_data_mean/: test_data_mean_1ObservableTraj.txt  test_data_mean_1ObservableTraj_short.txt  test_data_mean_1Observable_traj1.txt  test_data_mean_avgTraj.txt  test_data_mean_concTraj.txt
tests/test_data/test_data_sem/: test_data_sem_1ObservableTraj.txt  test_data_sem_avgTraj.txt  (+1 more)
tutorial/: Tutorial_github.ipynb  Tutorial_multiExp.json  Tutorial_multiExpFunction_run1.txt  Tutorial_multiExpFunction_run2.txt  Tutorial_multiExpFunction_run3.txt
tutorial/Tutorial_output_files/: preprocessed_data.json
(+17 files in other folders)
