[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timescaleanalysis"
version = "0.0.1"
description = "Analyze time dependent motions by fitting multi-exponential function."
authors = [{ name="Emanuel Dorbath" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
