[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timescaleanalysis"
version = "0.0.1"
description = "Analyze time dependent motions by fitting multi-exponential function."
authors = [{ name="Emanuel Dorbath" }]
dependencies = [
	"numpy>=2.0.0",
	"matplotlib>=3.10.0",
	"numba>=0.58",
	"scipy",
	"prettypyplot",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
	"pytest>=9.0",
]

